fixed x clipping through the input box

--- a/src/css/msg.scss
+++ b/src/css/msg.scss
@@ -20,7 +20,7 @@ ol > .msg {
 	color: var(--x-receiving-fg);
 	position: absolute;
 	right: calc(20% - 35px);
-	z-index: 99;
+	z-index: 1;
 	cursor: pointer;
 }
 
@@ -35,7 +35,7 @@ ol > .msg {
 	color: var(--x-sending-fg);
 	position: absolute;
 	right: 5px;
-	z-index: 99;
+	z-index: 1;
 	cursor: pointer;
 }
 
@@ -57,6 +57,7 @@ ol > .msg {
 	font-size: calc(20px - 0.5vw);
 	color: var(--input-fg);
 	background: var(--input-bg);
+	z-index: 2;
 }
 
 @media screen and (max-width: 700px) {
